--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2878,7 +2878,14 @@ i.toolbar-icon-my {
   margin-top:40px;
 }
 
-
+.list-card2-3{
+ width:90%;
+  height:40px;
+  background:#fff;
+  border-bottom: 1px solid #ccc;
+  line-height: 30px;
+  padding-left: 15px;
+}
 
 
 
@@ -3390,4 +3397,11 @@ label.label-radio input[type="radio"]:checked ~ .item-inner {
   margin-top:45px;
   background:0;
   right:15px;
+}
+
+/**社区活动 **/
+.demo-card-header-pic .card-header {
+  height: 40vw;
+  background-size: cover;
+  background-position: center;
 }
