--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3405,3 +3405,42 @@ label.label-radio input[type="radio"]:checked ~ .item-inner {
   background-size: cover;
   background-position: center;
 }
+
+/**余额-消费明细列表 **/
+.pay-list-rv{
+  width:100%;
+  margin-top:15px;
+  background: #fff;
+  height:80px;
+}
+.pay-list-rv-left{
+  width:25%;
+  float: left;
+}
+.pay-list-rv-left img{
+  width:42px;
+  margin-left:10px;
+  margin-top:10px;
+}
+.pay-list-rv-right{
+  width:75%;
+  margin-left:20%;
+}
+.pay-list-rv-right1{
+  width:100%;
+  height:40px;
+}
+.pay-list-rv-right1-1{
+  float:left;
+  line-height: 40px;
+}
+.pay-list-rv-right1-2{
+  line-height: 40px;
+  margin-left:60%;
+}
+.pay-list-rv-right2{
+  width:100%;
+  height:40px;
+  line-height: 40px;
+}
+
