git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@435 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3444,3 +3444,14 @@ label.label-radio input[type="radio"]:checked ~ .item-inner {
   line-height: 40px;
 }
 
+.picker-calendar-day.picker-calendar-day-has-events span:after {
+  content: '';
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background: #ff0004;
+  position: absolute;
+  margin-left: -2px;
+  left: 50%;
+  bottom: 1px;
+}
