git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@445 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2693,6 +2693,7 @@ i.toolbar-icon-my {
   border-radius: 2px;
   border:1px solid #EE7B08;
   font-size: 14px;
+  margin-left: 40%;
 }
 .myself-chongzhi-qusition{
   width:110px;
