git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@474 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3455,7 +3455,7 @@ label.label-radio input[type="radio"]:checked ~ .item-inner {
   bottom: 1px;
 }
 
-
+/** 厨娘烧饭下单 页面  图片 样式*/
 .zhongdiangong-threefood{
   width:100%!important;
 }
