--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2173,7 +2173,7 @@ i.toolbar-icon-my {
 .ddxq-neirong{
   width:100%;
   height:100px;
-  background:#F8F8F8;
+  background:#fffce8;
   font-size: 20px;
   color:#999;
   margin:20px auto;
@@ -2200,7 +2200,7 @@ i.toolbar-icon-my {
   width:100%;
   height:100px;
   margin: 15px auto;
-  background:#F8F8F8;
+  background:#fffce8;
   border-bottom:1px solid #E5E5E5;
 }
 .ddxq-lc{
