--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2803,6 +2803,37 @@ i.toolbar-icon-tixing {
 
 
 
+/*用户登录页面*/
+
+.longin-one{
+  width:100%;
+  background: #fff;
+  height:50px;
+  border-bottom:1px solid #EFEFF4;
+}
+.longin-one li{
+  float: left;
+  line-height: 50px;
+  text-align: center;
+}
+.longin-one li:nth-child(1){
+  width:50%;
+}
+.longin-one li:nth-child(2){
+  width:50%;
+}
+.longin-one li input{
+  padding-left: 5px;
+  border:0;
+}
+.login-two{
+  font-size: 14px;
+  width:95%;
+  text-align: left;
+  padding-left: 5%;
+}
+
+
 
 
 
@@ -2945,4 +2976,19 @@ i.toolbar-icon-tixing {
   line-height: 40px;
   color:#4EAFD8;
   clear: both;
+}
+.all-button7{
+  color:#fff;
+  background: #FDD855;
+}
+.all-button8{
+  width:80%;
+  margin-left: 10%;
+  height:50px;
+  background: #FDD855;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 50px;
+  color:#fff;
+  margin-top: 15px;
 }
