----日历选择时间

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2992,3 +2992,11 @@ i.toolbar-icon-tixing {
   color:#fff;
   margin-top: 15px;
 }
+
+.beijingse{
+	color:#FEB954;
+}
+
+.hour-beijingse{
+	color:#D1D1D1
+}
