--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2398,7 +2398,20 @@ i.toolbar-icon-tixing {
   font-size: 16px;
 }
 
+.rilikongjian4{
+  width:100%;
+  height:150px;
+  background: #fff;
+}
 
+.rilikongjian3-1{
+  width:14.28%;
+  float: left;
+  text-align: center;
+  line-height: 50px;
+  color:#000;
+  font-size: 16px;
+}
 
 /*金牌保洁*/
 .xiantiao{
