--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2394,7 +2394,6 @@ i.toolbar-icon-tixing {
   float: left;
   text-align: center;
   line-height: 50px;
-  color:#000;
   font-size: 16px;
 }
 
@@ -3011,5 +3010,5 @@ i.toolbar-icon-tixing {
 }
 
 .hour-beijingse{
-	color:#D1D1D1
+	color:#D1D1D1;
 }
