--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2845,8 +2845,39 @@ i.toolbar-icon-tixing {
   padding-left: 5%;
 }
 
+/*关于我们*/
+.abouts1{
+  margin-top:15px;
+  background: #fff;
+}
+.abouts1 p{
+  margin:0;
+  color:#666;
+  font-size: 16px;
+}
 
 
+
+
+/*添加地址*/
+.addr-dizhi{
+  width:100%;
+  margin-top: 15px;
+  padding-bottom: 60px;
+}
+.addr-dizhi li{
+  padding-left: 5%;
+  padding-right: 5%;
+  width:90%;
+  line-height: 30px;
+  background: #fff;
+  border-bottom: 1px solid #ddd;
+  word-wrap:break-word;
+}
+.addr-dizhi li input{
+  width:100%;
+  border:0;
+}
 
 
 
@@ -2877,6 +2908,11 @@ i.toolbar-icon-tixing {
 }
 .special-color5{
   color: #56B5F4;
+}
+.special-color6{
+  color: #7ABFFA!important;
+  margin:0;
+  font-size: 18px!important;
 }
 /*图片处理*/
 .all-img{
@@ -3003,6 +3039,16 @@ i.toolbar-icon-tixing {
   line-height: 50px;
   color:#fff;
   margin-top: 15px;
+}
+.all-button9{
+  width:100%;
+  height:50px;
+  background: #73BEE9;
+  text-align: center;
+  line-height: 50px;
+  color:#fff;
+  position: fixed;
+  bottom:50px;
 }
 
 .beijingse{
