---css新增颜色样式

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2914,6 +2914,9 @@ i.toolbar-icon-tixing {
   margin:0;
   font-size: 18px!important;
 }
+.special-color7{
+  color: #000;
+}
 /*图片处理*/
 .all-img{
    width:100%;padding:0;
