--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2901,9 +2901,11 @@ i.toolbar-icon-tixing {
 }
 .chose-time li:nth-child(1){
   width:80%;
+  height:50px;
 }
 .chose-time li:nth-child(2){
   width:15%;
+  height:50px;
 }
 
 
