--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3153,7 +3153,17 @@ i.toolbar-icon-tixing {
   position: fixed;
   bottom:50px;
 }
-
+.all-button10{
+  float: left;
+  width:30%;
+  margin-left: 10%;
+  height:30px;
+  background: #FF1C21;
+  border-radius: 3px;
+  text-align: center;
+  line-height: 30px;
+  color:#fff;
+}
 .beijingse{
 	color:#FEB954;
 }
