---修改充值页面

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3008,6 +3008,24 @@ i.toolbar-icon-tixing {
    -webkit-text-fill-color: transparent;
 -webkit-text-stroke: 0.5px #35ADF9;
 }
+.fangshiwenzi{
+	margin:0;
+	width:95%;
+	padding-left:5%;
+	line-height:40px;
+	color:#000;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
