--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2803,7 +2803,7 @@ i.toolbar-icon-tixing {
 /*优惠券*/
 .youhuiquan{
   width:100%;
-  height:180px;
+  height:200px;
   margin-top: 15px;
   background: #4EAFD8;
 }
@@ -2830,6 +2830,14 @@ i.toolbar-icon-tixing {
   text-align: center;
   line-height: 40px;
   color:#fff;
+  font-size:14px;
+}
+.youhuiquan-youxiaoqi1{
+  width:100%;
+  text-align: center;
+  line-height: 30px;
+  color:#fff;
+  font-size:14px;
 }
 
 
@@ -3022,6 +3030,67 @@ i.toolbar-icon-tixing {
 
 
 
+/* 家务包年 */
+.ddjg-input{
+  width:100px;
+  height:100px;
+  background: #FDEEEE;
+  margin:0px auto;
+  z-index: 3;
+}
+.ddjg-input img{
+  margin:20px -14px;
+}
+.ddjg-xq{
+  width:80%;
+  height:auto;
+  border:1px solid #999;
+  margin: 40px auto;
+  padding-bottom: 20px;
+  padding-top: 40px;
+  color:#999;
+  font-size: 20px;
+  text-align: center;
+  margin-top: -50px;
+  
+  z-index: 2;
+}
+
+
+.ddjg-xq-service{
+  width:80%;
+  height:auto;
+  border:1px solid #999;
+  margin: 40px auto;
+  padding-bottom: 20px;
+  padding-top: 40px;
+  color:#999;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 30px;
+  margin-top: -50px;
+  z-index: 2;
+}
+
+.ddjg-xq li:nth-child(1){
+  color:#333;
+}
+.ddjg-xq-service li:nth-child(1){
+  color:#333;
+}
+.ddjg-xq li p{
+  text-indent: 2em;
+  margin:0;
+  text-align: left;
+  margin-left:4px;
+}
+
+
+
+
+
+
+
 
 
 
@@ -3041,7 +3110,7 @@ i.toolbar-icon-tixing {
   color: #FF9731;
 }
 .special-color4{
-  color: #8C929D;
+  color: #8C929D!important;
 }
 .special-color5{
   color: #56B5F4;
