-- 现金支付不能补差价

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3074,6 +3074,9 @@ i.toolbar-icon-tixing {
   margin:0px auto;
   z-index: 3;
 }
+.ddjg-input img{
+  margin:20px -14px;
+}
 .ddjg-xq{
   width:80%;
   height:auto;
