--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -2895,42 +2895,61 @@ i.toolbar-icon-tixing {
 
 /*优惠券*/
 .youhuiquan{
-  width:100%;
-  height:200px;
+  width:47%;
+  height:150px;
   margin-top: 15px;
-  background: #4EAFD8;
-}
-.youhuiquan-num{
-  width: 50%;
-  height:80px;
-  font-size: 60px;
-  text-align: center;
-  line-height: 80px;
-  color:#fff;
-  font-weight: bold;
   float: left;
+  margin-left: 2%;
+  background: #4EAFD8;
+  border-radius: 5px;
 }
-.youhuiquan-tiaojian{
-  width:45%;
-  height:80px;
-  text-align: center;
-  line-height: 80px;
+.youhuiquan span{
+  line-height: 40px;
+  margin-top: 15px;
+  background: #2883BF;
   color:#fff;
-  float: right;
+  font-size: 14px;
 }
-.youhuiquan-youxiaoqi{
-  width:100%;
-  text-align: center;
+.youhuiquan1{
+  width:45%;
+  float: left;
+  height:40px;
+  padding-left:5%;
   line-height: 40px;
   color:#fff;
-  font-size:14px;
+  font-size: 24px;
+  font-weight:bold;
 }
-.youhuiquan-youxiaoqi1{
-  width:100%;
-  text-align: center;
+.youhuiquan2{
+  float: left;
+  height:60px;
+  line-height: 60px;
+  width:35%;
+  padding-left: 15%;
+  font-size: 40px;
+  font-weight:bold;
+  color:#fff;
+  margin-top: -15px;
+}
+.youhuiquan p{
+  margin:0;
+  text-align: left;
   line-height: 30px;
   color:#fff;
-  font-size:14px;
+  font-weight: bold;
+  font-size: 14px;
+}
+.youhuiquan3{
+  width:95%;
+  margin-left: 2.5%;
+  height:40px;
+  background: #fff;
+  color: #4EAFD8;
+  text-align: center;
+  line-height: 40px;
+  font-size: 14px;
+  margin-top: 15px;
+  clear:both;
 }
 
 
@@ -3919,7 +3938,7 @@ i.toolbar-icon-tixing {
 }
 .chongzhi2{
   width:100%;
-  height:280px;
+  height:350px;
   background: #fff;
 }
 .chongzhi2 img{
@@ -4008,6 +4027,11 @@ i.toolbar-icon-tixing {
 .chongzhi5-kong{
   width:100%;
   height:15px;
+}
+.chongzhi5-kong1{
+  width:100%;
+  height:30px;
+  background: #fff;
 }
 .chongzhi5-2{
   width:95%;
@@ -4115,6 +4139,98 @@ i.toolbar-icon-tixing {
   color:#FFDD64;
 }
 
+
+
+/*老年到家*/
+.old-tiexin{
+  width:100%;
+  background: #fff;
+}
+.old-tiexin p{
+  margin:0;
+  line-height: 50px;
+  color:#FF7903;
+  text-align: center;
+  font-size: 24px;
+}
+.old-tiexin1{
+  width:100%;
+  background: #fff;
+}
+.old-tiexin1 p{
+  margin:0;
+  line-height: 50px;
+  color:#FF7903;
+  text-align: center;
+  font-size: 24px;
+}
+.old-tiexin2{
+  width:100%;
+  background: #fff;
+}
+.old-tiexin2 p{
+  margin:0;
+  line-height: 50px;
+  color:#FF7903;
+  text-align: center;
+  font-size: 24px;
+}
+.old-tiexin-1{
+  float: left;
+  height:180px;
+  width:25%;
+}
+.old-tiexin-1 img{
+  width:66%;
+  margin-top: 30px;
+}
+.old-tiexin-1 li{
+  width:100%;
+  text-align: center;
+  font-size: 14px;
+}
+.old-tiexin-2{
+  width:75%;
+  height:180px;
+  float: right;
+}
+.old-tiexin-2 ul{
+  width:33.333333333333333%;
+  height:90px;
+  float: left;
+}
+.old-tiexin-2 ul li{
+  text-align: center;
+  font-size: 14px;
+}
+.old-tiexin-2 ul li img{
+  width:60%;
+}
+.old-tiexin-3{
+  width:25%;
+  height:100px;
+  float: left;
+}
+.old-tiexin-3 li{
+  text-align: center;
+  font-size: 14px;
+}
+.old-tiexin-3 li img{
+  width:60%;
+}
+.old-tiexin-4{
+  float: left;
+  height:100px;
+  width:33.333333333333%;
+  background: #fff;
+}
+.old-tiexin-4 li{
+  text-align: center;
+  font-size: 14px;
+}
+.old-tiexin-4 li img{
+  width:40%;
+}
 
 
 
