--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3938,7 +3938,6 @@ i.toolbar-icon-tixing {
 }
 .chongzhi2{
   width:100%;
-  height:350px;
   background: #fff;
 }
 .chongzhi2 img{
@@ -3949,7 +3948,6 @@ i.toolbar-icon-tixing {
 }
 .chongzhi3{
   width:100%;
-  height:560px;
   background: #fff;
 }
 .chongzhi3 img{
@@ -4032,6 +4030,7 @@ i.toolbar-icon-tixing {
   width:100%;
   height:30px;
   background: #fff;
+  clear: both;
 }
 .chongzhi5-2{
   width:95%;
