--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3798,17 +3798,16 @@ i.toolbar-icon-tixing {
 }
 .waiter7{
   width:100%;
-  height:300px;
   background: #fff;
 }
 .waiter7-1{
-  width:70%;
+  width:100%;
   height:35px;
   background: #fff;
 }
 .waiter7-1 p{
   margin:0;
-  width:40%;
+  width:28%;
   line-height: 35px;
   margin-left: 10px;
   float: left;
@@ -3834,9 +3833,51 @@ i.toolbar-icon-tixing {
   margin-right: 15px;
   overflow: hidden;
 }
+.waiter7-picture1 img{
+  width:100%;
+  height:100%;
+}
+
+
+.waiter7-picture1{
+  width:80px;
+  float: right;
+  border:1px solid #F1F1F1;
+  margin-top: -85px;
+  height:100px;
+  margin-right: 15px;
+  overflow: hidden;
+}
 .waiter7-picture img{
   width:100%;
   height:100%;
+}
+
+
+
+.waiter7-2{
+  width:100%;
+  height:35px;
+  background: #fff;
+}
+.waiter7-2 p{
+  margin:0;
+  width:22%;
+  line-height: 35px;
+  margin-left: 10px;
+  float: left;
+  font-size: 14px;
+}
+.waiter7-2 span{
+  line-height: 35px;
+  font-size: 14px;
+  color:#666;
+}
+.waiter7-2 img{
+  width:20px;
+  float: left;
+  margin-left: 3px;
+  margin-top: 7px;
 }
 .waiter8{
   width:100%;
