--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -4017,6 +4017,9 @@ i.toolbar-icon-tixing {
   border:1px solid #eee;
   overflow: hidden;
 }
+.waiter10-2-1 img{
+  width:100%;
+}
 .waiter10-3{
   width:70%;
   float: right;
