--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3802,41 +3802,7 @@ i.toolbar-icon-tixing {
   font-size: 14px;
   color:#666;
 }
-/*.waiter6-1 img{
-  width:30px;
-  margin-top: 10px;
-  margin-left: 5px;
-  float: left;
-}
-.waiter6-1 span{
-  margin-top: 12px;
-  margin-left: 5px;
-  float: left;
-}
-.waiter6-1 input{
-  margin-left: 5px;
-  border:0;
-  float: left;
-  width:5%;
-  margin-top: 12px;
-}
-.waiter6-1-1{
-  width:40%;
-  height:50px;
-  text-align: left;
-  line-height: 50px;
-  float: left;
-  font-size: 14px;
-  margin-left: 15px;
-}
-.waiter6-1-2{
-  width:20%;
-  height:50px;
-  text-align: left;
-  line-height: 50px;
-  float: right;
-  font-size: 14px;
-}*/
+
 .waiter7{
   width:100%;
   background: #fff;
@@ -4066,6 +4032,51 @@ i.toolbar-icon-tixing {
 }
 .waiter10-4-1 img{
   width:100%;
+}
+.waiter11{
+  width:100%;
+  height:100px;
+  background: #fff;
+  margin-top: 15px;
+}
+.waiter11-1{
+  width:100%;
+  height:50px;
+}
+.waiter11-1 img{
+  width:30px;
+  margin-top: 10px;
+  margin-left: 5px;
+  float: left;
+}
+.waiter11-1 span{
+  margin-top: 12px;
+  margin-left: 5px;
+  float: left;
+}
+.waiter11-1 input{
+  margin-left: 5px;
+  border:0;
+  float: left;
+  width:5%;
+  margin-top: 12px;
+}
+.waiter11-1-1{
+  width:40%;
+  height:50px;
+  text-align: left;
+  line-height: 50px;
+  float: left;
+  font-size: 14px;
+  margin-left: 15px;
+}
+.waiter11-1-2{
+  width:20%;
+  height:50px;
+  text-align: left;
+  line-height: 50px;
+  float: right;
+  font-size: 14px;
 }
 
 
