---添加删除图片

--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3743,6 +3743,7 @@ i.toolbar-icon-tixing {
     text-decoration: none;
     text-indent: 0;
     line-height: 40px;
+    width:100%;
 }
 .waiter3-1-1 input {
     position: absolute;
