--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3750,6 +3750,7 @@ i.toolbar-icon-tixing {
     right: 0;
     top: 0;
     opacity: 0;
+    height:40px;
 }
 /*.waiter3-1-1:hover {
     background: #AADFFD;
