--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -4224,6 +4224,17 @@ i.toolbar-icon-tixing {
   background: #fff;
   clear: both;
 }
+.chongzhi5-kong2{
+  width:100%;
+  height:5px;
+  background: #fff;
+  clear: both;
+}
+.chongzhi5-kong3{
+  width:100%;
+  height:5px;
+  clear: both;
+}
 .chongzhi5-2{
   width:95%;
   margin-left: 2.5%;
@@ -4421,6 +4432,46 @@ i.toolbar-icon-tixing {
 }
 .old-tiexin-4 li img{
   width:40%;
+}
+.old-yuesao{
+  width:22%;
+  margin:0!important;
+  padding-left: 2%;
+  font-size: 14px;
+  float: left;
+}
+.old-yuesao1{
+  font-size: 14px;
+  float: right;
+  width:76%;
+  line-height: 30px;
+}
+.old-yuesao2{
+  width:80%;
+  height:40px;
+  margin-top:5px;
+  float: right;
+  text-align: center;
+  line-height: 40px;
+  color:#fff;
+  background: #82CEC2;
+  margin-right: 15px;
+  font-size: 14px;
+}
+.old-yuesao3{
+  width:80%;
+  height:40px;
+  margin-top:5px;
+  float: right;
+  text-align: center;
+  line-height: 40px;
+  color:#fff;
+  background: #FB6EF0;
+  margin-right: 15px;
+  font-size: 14px;
+}
+.old-yuersao{
+  background:url(../img/wengjiajie/yuersao-banner1.png) no-repeat center;
 }
 
 
