--- a/ROOT/css/index.css
+++ b/ROOT/css/index.css
@@ -7,6 +7,123 @@ body,dd,dt,ul,li,p,img,span,div,b,em,a,h1,h2,h3,h4,h5{
 body{
     overflow:scroll;
 }
+
+
+.index-shouye{
+    background:url(../img/bj-banner.png) no-repeat center;
+    background-size: 100% 100%;
+    width:100%;
+    position: relative;
+    overflow:hidden;
+}
+.index-shouye1{
+    width:100%;
+    height:60px;
+}
+.index-shouye1 img{
+    height:30px;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.index-shouye2{
+    width:100%;
+    height:150px;
+}
+.index-shouye2 p{
+    float: left;
+    line-height: 150px;
+    padding-left: 30px;
+    color: #89BFF4;
+}
+.index-shouye2 img{
+    height:30px;
+    margin-top: 60px;
+    margin-left: 15px;
+}
+.index-shouye3{
+    position: absolute;
+    left:250px;
+    background: url(../img/mobile.png) no-repeat center;
+    width:215px;
+    height:382px;
+    padding:80px 50px 80px 50px;
+}
+.index-shouye3-1{
+    width:100%;
+    height:100%;
+    border:1px solid #ccc;
+}
+.index-shouye4{
+    width:450px;
+    opacity:0.8;
+    height:40px;
+    background: #fff;
+    position:absolute;
+    right:250px;
+    border-radius: 5px;
+}
+.index-shouye4 li{
+    width:150px;
+    height:40px;
+    float: left;
+    text-align: center;
+    line-height: 40px;
+    font-weight: bold;
+}
+.index-shouye5{
+    position: absolute;
+    right:340px;
+}
+.index-shouye5 img{
+    width:230px;
+}
+.index-shouye6{
+    width:450px;
+    height:80px;
+    position:absolute;
+    right:250px;
+}
+.index-shouye6 li{
+    width:100%;
+    height:40px;
+    text-align: center;
+    line-height: 40px;
+    font-weight: bold;
+}
+.index-shouye7{
+    position:absolute;
+    bottom:0;
+    width:40%;
+    left:40%;
+    height:80px;
+}
+.index-shouye7-1{
+    width:100%;
+    height:40px;
+}
+.index-shouye7-1 li{
+    width:25%;
+    height:40px;
+    text-align: center;
+    line-height:40px;font-weight: bold;color: #000;
+    float: left;
+}
+.index-shouye7-2{
+    width:100%;
+    height:40px;
+    text-align: center;
+    line-height: 40px;；
+    font-weight: bold;
+    color:#000;
+}
+
+
+
+
+
+
+
+
 .main-top{
     width:100%;margin:0 auto;
     height:94px;
@@ -1368,4 +1485,21 @@ body{
 }
 .main-zhuanti{
     width:100%;
+}
+
+
+
+
+
+
+/*特殊颜色*/
+/*导航栏颜色*/
+.special-color{
+    color:#89E45D;
+}
+.special-color1{
+    color:#8BBDEF;
+}
+.special-color2{
+    color:#f29949;
 }
