--- a/ROOT/css/index.css
+++ b/ROOT/css/index.css
@@ -42,16 +42,15 @@ body{
 }
 .index-shouye3{
     position: absolute;
-    left:250px;
-    background: url(../img/mobile.png) no-repeat center;
-    width:215px;
-    height:382px;
-    padding:80px 50px 80px 50px;
+    left:120px;
+    background: url(../img/mobile1.png) no-repeat center;
+    width:377px;
+    height:451px;
+    padding:80px 77px 60px 77px;
 }
 .index-shouye3-1{
     width:100%;
     height:100%;
-    border:1px solid #ccc;
 }
 .index-shouye4{
     width:450px;
@@ -94,7 +93,7 @@ body{
     position:absolute;
     bottom:0;
     width:40%;
-    left:40%;
+    left:50%;
     height:80px;
 }
 .index-shouye7-1{
