--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -3009,7 +3009,11 @@ i.toolbar-icon-tixing {
   margin-top: 15px;
   clear:both;
 }
-
+.youhuiquan4{
+  width:100%;
+  height:150px;
+  background: #FFCE23;
+}
 
 
 /*用户登录页面*/
