--- a/ROOT/css/index.css
+++ b/ROOT/css/index.css
@@ -21,7 +21,7 @@ body{
     height:60px;
 }
 .index-shouye1 img{
-    height:80px;
+    height:80px;；
     margin-top: 10px;
     margin-left: 10px;
 }
