--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -4316,7 +4316,7 @@ i.toolbar-icon-tixing {
 }
 .chongzhi5{
   width:100%;
-  height:330px;
+  height:440px;
   background: #fff;
   margin:0;
 
@@ -4479,6 +4479,57 @@ i.toolbar-icon-tixing {
   text-align: center;
   line-height: 30px;
   background: #FFDD64;
+  color:#fff;
+  font-size: 14px;
+  border-radius: 15px;
+}
+
+
+
+
+.chongzhi5-4{
+  width:95%;
+  margin-left: 2.5%;
+  border-radius: 5px;
+  height:90px;
+  box-shadow: 3px 3px 3px 3px #eee  ;
+  overflow: hidden;
+}
+.chongzhi5-4-1{
+  background: #FF0012;
+  width:30%;
+  height:90px;
+  text-align: center;
+  line-height: 90px;
+  font-size: 24px;
+  font-weight: bold;
+  float: left;
+  color:#fff;
+}
+.chongzhi5-4-2{
+  width:50%;
+  float: left;
+  height:90px;
+}
+.chongzhi5-4-2 li{
+  width:100%;
+  height:30px;
+  text-align: center;line-height: 30px;
+  font-size: 14px;
+  color:#FF0012;
+}
+.chongzhi5-4-3{
+  width:20%;
+  height:90px;
+  float: right;
+}
+.chongzhi5-4-3-1{
+  width:100%;
+  height:30px;
+  margin-top: 30px;
+  text-align: center;
+  line-height: 30px;
+  background: #FF0012;
   color:#fff;
   font-size: 14px;
   border-radius: 15px;
